--- a/phonesensor/src/main/res/values/strings.xml
+++ b/phonesensor/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="url_release">https://github.com/MD2Korg/mCerebrum-PhoneSensor/releases</string>
     <string name="url_sourcecode">https://github.com/MD2Korg/mCerebrum-PhoneSensor/</string>
     <string name="action_settings">Settings</string>
+    <string name="button_close">Close</string>
 </resources>
